# Projet-encadre

./: README.md  main.py  mlflow.db  notebook.ipynb  pyproject.toml
mlartifacts/0/models/m-100ce0c2deb349edab36acd0c02983fa/artifacts/: MLmodel
mlartifacts/0/models/m-15957ec0d59d4cc1884aed574a5220dd/artifacts/: MLmodel  model.pkl
mlartifacts/0/models/m-4819022c0c0e498790a6213c3a031e85/artifacts/: MLmodel  model.pkl
mlartifacts/0/models/m-5ae4d1d351a04fefbbd80664840d19fa/artifacts/: MLmodel  conda.yaml  requirements.txt
mlartifacts/0/models/m-5fd8f27f040143569c06a46d6353e9fc/artifacts/: MLmodel  requirements.txt
mlartifacts/0/models/m-71f73e0500024294ae6ce6ce0b592275/artifacts/: MLmodel
mlartifacts/0/models/m-8fd11edf41b84571b76cda2d4ed9f4e9/artifacts/: MLmodel
mlartifacts/0/models/m-ada9ca8b82904f79993bdcb5afc14ef3/artifacts/: MLmodel  model.pkl
mlartifacts/0/models/m-ae3c625889fc4591a9520e1e0e0e46df/artifacts/: MLmodel  model.pkl
mlartifacts/0/models/m-d8f9dfafdf5e4b04a4565a74cbabd36f/artifacts/: MLmodel  conda.yaml
mlartifacts/0/models/m-f45d3fa47c2a4ddeb080025376da4649/artifacts/: MLmodel
mlartifacts/0/models/m-fdcb7cf55f094d509770b315c4b7995e/artifacts/: MLmodel  model.pkl
models/: robust_scaler.pkl
